--- a/cityownedproperties.ipynb
+++ b/cityownedproperties.ipynb
@@ -5,14 +5,295 @@
    "id": "e7cec8b3",
    "metadata": {},
    "source": [
-    "# City Owned Properties\n",
+    "# City-Owned Properties\n",
     "### Kamron Gross"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2819e825",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>pin</th>\n",
+       "      <th>address</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>parc_sq_ft</th>\n",
+       "      <th>class</th>\n",
+       "      <th>zoned_as</th>\n",
+       "      <th>inventory_type</th>\n",
+       "      <th>current_status</th>\n",
+       "      <th>...</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>census_tract</th>\n",
+       "      <th>neighborhood_name</th>\n",
+       "      <th>council_district</th>\n",
+       "      <th>ward</th>\n",
+       "      <th>fire_zone</th>\n",
+       "      <th>police_zone</th>\n",
+       "      <th>dpw_streets</th>\n",
+       "      <th>dpw_enviro</th>\n",
+       "      <th>dpw_parks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7688440</td>\n",
+       "      <td>185254</td>\n",
+       "      <td>0003N00073000000</td>\n",
+       "      <td>52  CRAIGHEAD ST</td>\n",
+       "      <td>City of Pittsburgh</td>\n",
+       "      <td>1015.0</td>\n",
+       "      <td>Building</td>\n",
+       "      <td>R1D-H</td>\n",
+       "      <td>CDC Property Reserve</td>\n",
+       "      <td>Sale Pending</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.998701</td>\n",
+       "      <td>4.200318e+10</td>\n",
+       "      <td>Mount Washington</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4-5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Emerald</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7688441</td>\n",
+       "      <td>185255</td>\n",
+       "      <td>0003N00073000500</td>\n",
+       "      <td>54  CRAIGHEAD ST</td>\n",
+       "      <td>City of Pittsburgh</td>\n",
+       "      <td>877.0</td>\n",
+       "      <td>Building</td>\n",
+       "      <td>R1D-H</td>\n",
+       "      <td>CDC Property Reserve</td>\n",
+       "      <td>Sale Pending</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.998701</td>\n",
+       "      <td>4.200318e+10</td>\n",
+       "      <td>Mount Washington</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4-5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Emerald</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7688442</td>\n",
+       "      <td>185256</td>\n",
+       "      <td>0003N00186000000</td>\n",
+       "      <td>707  MCLAIN ST</td>\n",
+       "      <td>City of Pittsburgh</td>\n",
+       "      <td>3833.0</td>\n",
+       "      <td>Vacant Land</td>\n",
+       "      <td>R1D-M</td>\n",
+       "      <td>CDC Property Reserve</td>\n",
+       "      <td>Sale Pending</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.995517</td>\n",
+       "      <td>4.200318e+10</td>\n",
+       "      <td>Allentown</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4-5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Emerald</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7688443</td>\n",
+       "      <td>185258</td>\n",
+       "      <td>0003N00190000000</td>\n",
+       "      <td>639  MCLAIN ST</td>\n",
+       "      <td>City of Pittsburgh</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>Vacant Land</td>\n",
+       "      <td>R1D-M</td>\n",
+       "      <td>CDC Property Reserve</td>\n",
+       "      <td>Sale Pending</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.995861</td>\n",
+       "      <td>4.200318e+10</td>\n",
+       "      <td>Allentown</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4-5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Emerald</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7688444</td>\n",
+       "      <td>185259</td>\n",
+       "      <td>0003N00194000000</td>\n",
+       "      <td>631  MCLAIN ST</td>\n",
+       "      <td>City of Pittsburgh</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>Vacant Land</td>\n",
+       "      <td>R1D-M</td>\n",
+       "      <td>CDC Property Reserve</td>\n",
+       "      <td>Sale Pending</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.996226</td>\n",
+       "      <td>4.200318e+10</td>\n",
+       "      <td>Allentown</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4-5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Emerald</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       _id      id               pin           address               owner  \\\n",
+       "0  7688440  185254  0003N00073000000  52  CRAIGHEAD ST  City of Pittsburgh   \n",
+       "1  7688441  185255  0003N00073000500  54  CRAIGHEAD ST  City of Pittsburgh   \n",
+       "2  7688442  185256  0003N00186000000    707  MCLAIN ST  City of Pittsburgh   \n",
+       "3  7688443  185258  0003N00190000000    639  MCLAIN ST  City of Pittsburgh   \n",
+       "4  7688444  185259  0003N00194000000    631  MCLAIN ST  City of Pittsburgh   \n",
+       "\n",
+       "   parc_sq_ft        class zoned_as        inventory_type current_status  ...  \\\n",
+       "0      1015.0     Building    R1D-H  CDC Property Reserve   Sale Pending  ...   \n",
+       "1       877.0     Building    R1D-H  CDC Property Reserve   Sale Pending  ...   \n",
+       "2      3833.0  Vacant Land    R1D-M  CDC Property Reserve   Sale Pending  ...   \n",
+       "3      3750.0  Vacant Land    R1D-M  CDC Property Reserve   Sale Pending  ...   \n",
+       "4      3650.0  Vacant Land    R1D-M  CDC Property Reserve   Sale Pending  ...   \n",
+       "\n",
+       "   longitude  census_tract neighborhood_name  council_district  ward  \\\n",
+       "0 -79.998701  4.200318e+10  Mount Washington               3.0  18.0   \n",
+       "1 -79.998701  4.200318e+10  Mount Washington               3.0  18.0   \n",
+       "2 -79.995517  4.200318e+10         Allentown               3.0  18.0   \n",
+       "3 -79.995861  4.200318e+10         Allentown               3.0  18.0   \n",
+       "4 -79.996226  4.200318e+10         Allentown               3.0  18.0   \n",
+       "\n",
+       "   fire_zone police_zone  dpw_streets  dpw_enviro dpw_parks  \n",
+       "0        4-5         3.0          4.0    Southern   Emerald  \n",
+       "1        4-5         3.0          4.0    Southern   Emerald  \n",
+       "2        4-5         3.0          4.0    Southern   Emerald  \n",
+       "3        4-5         3.0          4.0    Southern   Emerald  \n",
+       "4        4-5         3.0          4.0    Southern   Emerald  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "city = pd.read_csv(\"cityownedproperties.csv\")\n",
+    "city.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c24f2c5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 89 different neighborhoods with city owned properties.\n",
+      "\n",
+      "neighborhood_name\n",
+      "Hazelwood                898\n",
+      "Perry South              828\n",
+      "Homewood North           586\n",
+      "Larimer                  521\n",
+      "Perry North              435\n",
+      "                        ... \n",
+      "Central Lawrenceville      7\n",
+      "Glen Hazel                 4\n",
+      "Allegheny West             4\n",
+      "Friendship                 1\n",
+      "Arlington Heights          1\n",
+      "Name: count, Length: 89, dtype: int64\n",
+      "\n",
+      "The neighborhood with the most city owned properties is Hazelwood. The neighborhood with the least amount of city owned properties is Arlington Heights.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('There are ' + str(city['neighborhood_name'].nunique()) + ' different neighborhoods with city owned properties.\\n')\n",
+    "property_counts = city['neighborhood_name'].value_counts()\n",
+    "print(property_counts)\n",
+    "\n",
+    "print('\\nThe neighborhood with the most city owned properties is Hazelwood. ' \\\n",
+    "'The neighborhood with the least amount of city owned properties is Arlington Heights.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab207e67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
