--- a/castro_greenways.ipynb
+++ b/castro_greenways.ipynb
@@ -55,6 +55,14 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5bb5d19",
+   "metadata": {},
+   "source": [
+    "The graph shows that the neighborhood of Spring Hill Spring Garden is the nieghborhood with the most amount of greenways, and is therefore, the best neighborhod."
+   ]
   }
  ],
  "metadata": {
