--- a/finalProject.ipynb
+++ b/finalProject.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "19af29bb",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,12 @@
     "import pandas as pd\n",
     "\n",
     "city = pd.read_csv(\"cityownedproperties.csv\")\n",
-    "city.head()"
+    "print('There are ' + str(city['neighborhood_name'].nunique()) + ' different neighborhoods with city owned properties.\\n')\n",
+    "property_counts = city['neighborhood_name'].value_counts()\n",
+    "print(property_counts)\n",
+    "\n",
+    "print('\\nThe neighborhood with the most city owned properties is Hazelwood. ' \\\n",
+    "'The neighborhood with the least amount of city owned properties is Arlington Heights.')"
    ]
   },
   {
@@ -428,7 +433,7 @@
    "id": "b516b118",
    "metadata": {},
    "source": [
-    "Conclusion by Kameron Gross:"
+    "Conclusion by Kamron Gross: The information provided by each of the chosen metrics showed varying results. It's hard to define a certain best or worst neihborhood based on just the statistics that we chose alone. However, based on my own knowledge and the information provided I believe that South Oakland is the best neighborhood."
    ]
   },
   {
