Revise conclusion in finalProject.ipynb
Updated conclusion in finalProject.ipynb to provide a summary of neighborhood metrics.

--- a/finalProject.ipynb
+++ b/finalProject.ipynb
@@ -436,7 +436,7 @@
    "id": "5eb4240a",
    "metadata": {},
    "source": [
-    "Conclusion by Christian Ruiz:"
+    "Conclusion by Christian Ruiz: The three metrics and datasets we use give us all different results of which neighborhood is the best. Many other metrics could be considered when determining the best neighborhood. However, based on the three metrics we use, South Oakland is the best neighborhood in which to live. "
    ]
   }
  ],
